bug: always rendered floating groups z-index

--- a/packages/dockview-core/src/dnd/overlay.scss
+++ b/packages/dockview-core/src/dnd/overlay.scss
@@ -29,10 +29,6 @@
     position: absolute;
     z-index: 997;
 
-    &.dv-bring-to-front {
-        z-index: 999;
-    }
-
     border: 1px solid var(--dv-tab-divider-color);
     box-shadow: var(--dv-floating-box-shadow);
 
