--- a/packages/dockview-core/src/overlayReadyContainer.scss
+++ b/packages/dockview-core/src/overlayReadyContainer.scss
@@ -7,7 +7,7 @@
         z-index: 998;
 
         &.dv-render-overlay-active {
-          z-index: 1000;
+          // z-index: 1000;
         }
     }
 }
